@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class User {
  -String name
  -String email
  -String password
}

class Administrator {
  -String email
}

class Product {
  -String reference
  -String name
  -String description
  -Double price
  -Double weight
  -Integer amount
}

class Pharmacy {
  -String designation
  -String email
  -Integer parkMax
}

class Address {
  -String street
  -String postalCode
  -Integer number
  -String locality
  -String GPSCoordinates
}

Platform "1" -- "*" Administrator : has registered >
Platform "1" -- "*" User : has registered >
Platform "1" -- "1" Pharmacy : has registered >

Administrator "1" -- "1" Pharmacy : creates >
Administrator "0..1" -- "1" User : act as >
Administrator "1" -- "*" Product : add/remove/update >

Pharmacy "1" -- "1" Address : has >
Pharmacy "1" -- "*" Product : has >
@enduml
